[package]
name = "an-os"
version = "0.1.0"
authors = ["Tom Streller <tom.streller@functional-games.de>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
