[package]
name = "an-os"
version = "0.1.0"
authors = ["Tom Streller <tom.streller@functional-games.de>"]
edition = "2018"

[dependencies]
bootloader = "0.6.4"
volatile = "0.2.3"
spin = "0.4.9"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[[test]]
name = "should_panic"
harness = false
